# digital-ocean-firewall-updater

./: .pre-commit-config.yaml  pyproject.toml
src/: main.py  updates.py  utils.py
